--- a/Logistic Regression/PB_multivariant_logistic_regression_telecom_chrun.ipynb
+++ b/Logistic Regression/PB_multivariant_logistic_regression_telecom_chrun.ipynb
@@ -17,15 +17,23 @@
    "metadata": {},
    "source": [
     "### Steps:\n",
-    "    1. Data Preparation \n",
-    "        a. Importing and Merging Data\n",
-    "        b. Inspecting the merged dataframe\n",
-    "        c. Data Preparation\n",
-    "        d. Checking Outliers\n",
-    "        e. Checking null values\n",
-    "    2. Train-Test split\n",
-    "    3. Feature Scaling\n",
-    "    4. Check data imbalance"
+    " - Data cleaning and preparation\n",
+    "        - Combining three dataframes\n",
+    "        - Handling categorical variables\n",
+    "            - Mapping categorical variables to integers\n",
+    "            - Dummy variable creation\n",
+    "        - Handling missing values\n",
+    " - Test-train split and scaling\n",
+    " - Model Building\n",
+    "        - Feature elimination based on correlations\n",
+    "        - Feature selection using RFE (Coarse Tuning)\n",
+    "        - Manual feature elimination (using p-values and VIFs)\n",
+    " - Model Evaluation\n",
+    "        - Accuracy\n",
+    "        - Sensitivity and Specificity\n",
+    "        - Optimal cut-off using ROC curve\n",
+    "        - Precision and Recall\n",
+    " - Predictions on the test set"
    ]
   },
   {
@@ -52,6 +60,22 @@
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdb1a649",
+   "metadata": {},
+   "source": [
+    "# Data cleaning and preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3f3334d",
+   "metadata": {},
+   "source": [
+    "### Combining three dataframes"
    ]
   },
   {
@@ -6528,7 +6552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11600c23",
+   "id": "227d3208",
    "metadata": {},
    "source": [
     "### ROC Curve \n",
@@ -6538,7 +6562,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "8a84421b",
+   "id": "a0947372",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6561,7 +6585,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "21ef728e",
+   "id": "f628b718",
    "metadata": {},
    "outputs": [
     {
@@ -6583,7 +6607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3af2cfd2",
+   "id": "adce54a6",
    "metadata": {},
    "source": [
     "#### Finding Optimal cutoff point i.e. Threshold for max AUC"
@@ -6592,7 +6616,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "3d062513",
+   "id": "00b2adb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6603,7 +6627,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "ab1b4418",
+   "id": "78dd3862",
    "metadata": {},
    "outputs": [
     {
@@ -6624,7 +6648,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "a10a275c",
+   "id": "ce9369e2",
    "metadata": {},
    "outputs": [
     {
@@ -6784,7 +6808,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "6308fbb7",
+   "id": "d7dcf639",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6794,7 +6818,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "e5df6c6e",
+   "id": "02280c15",
    "metadata": {},
    "outputs": [
     {
@@ -6848,7 +6872,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "08fe3264",
+   "id": "d29b7fa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6867,7 +6891,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "ec725c3c",
+   "id": "bbfb404e",
    "metadata": {},
    "outputs": [
     {
@@ -6895,7 +6919,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "abb09424",
+   "id": "f41d7ef8",
    "metadata": {},
    "outputs": [
     {
@@ -6927,7 +6951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b12f62b1",
+   "id": "86ce62a2",
    "metadata": {},
    "source": [
     "#### From above curve,  0.3 is the optimum point to take ia as a cutoff probability "
@@ -6936,7 +6960,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "c7db3ae2",
+   "id": "c2279210",
    "metadata": {},
    "outputs": [
     {
@@ -6960,7 +6984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56eb71ef",
+   "id": "bd9bae51",
    "metadata": {},
    "source": [
     "### Precision and Recall\n",
@@ -6973,7 +6997,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "888e43ba",
+   "id": "b902e22f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6987,7 +7011,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "dc591d0c",
+   "id": "56df7885",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6997,7 +7021,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "ccc0986d",
+   "id": "513dfabe",
    "metadata": {},
    "outputs": [
     {
@@ -7019,7 +7043,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "bedbada2",
+   "id": "403e06e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7030,7 +7054,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "00f18c41",
+   "id": "858ad5ac",
    "metadata": {},
    "outputs": [
     {
@@ -7051,7 +7075,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "8d7e5a6a",
+   "id": "bf53b4fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7062,7 +7086,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "45ae97aa",
+   "id": "a3988778",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7073,7 +7097,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "88f14d09",
+   "id": "47dc5907",
    "metadata": {},
    "outputs": [
     {
@@ -7094,7 +7118,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "8301d0ca",
+   "id": "a52cac2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7105,7 +7129,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "cac1c3ce",
+   "id": "b19368f2",
    "metadata": {},
    "outputs": [
     {
@@ -7125,7 +7149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64209a64",
+   "id": "6b0012de",
    "metadata": {},
    "source": [
     "#### Plot Precision Recall Curve"
@@ -7134,7 +7158,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "3caae540",
+   "id": "2cbb6387",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7144,7 +7168,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "41647ff4",
+   "id": "8c628c1c",
    "metadata": {},
    "outputs": [
     {
@@ -7170,7 +7194,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "5a74d370",
+   "id": "c8562160",
    "metadata": {},
    "outputs": [
     {
@@ -7196,7 +7220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e089d2f",
+   "id": "cbc001e0",
    "metadata": {},
    "source": [
     "### Making prediction on test set"
@@ -7205,7 +7229,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "b48967fb",
+   "id": "cc4ae514",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7215,7 +7239,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "11b6e7b4",
+   "id": "0417c329",
    "metadata": {},
    "outputs": [
     {
@@ -7463,7 +7487,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "8a3e6219",
+   "id": "34b98911",
    "metadata": {},
    "outputs": [
     {
@@ -7484,7 +7508,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "18694926",
+   "id": "b5fe05b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7494,7 +7518,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "62224dad",
+   "id": "5da27075",
    "metadata": {},
    "outputs": [
     {
@@ -7600,7 +7624,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "ccac986a",
+   "id": "580cbe07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7611,7 +7635,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "81da4d3f",
+   "id": "55c12da4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7621,7 +7645,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "c5e47ea5",
+   "id": "f7d8dafd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7632,7 +7656,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "2bf08d1a",
+   "id": "b2d24f11",
    "metadata": {},
    "outputs": [
     {
@@ -7792,7 +7816,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "8fe6e4e6",
+   "id": "58ed2c15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7803,7 +7827,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "82450cb9",
+   "id": "6c8854ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7814,7 +7838,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "3c5e75a6",
+   "id": "b299f0ae",
    "metadata": {},
    "outputs": [
     {
@@ -7887,7 +7911,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "7de71887",
+   "id": "82732a32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7897,7 +7921,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "773587dc",
+   "id": "db55ae58",
    "metadata": {},
    "outputs": [
     {
@@ -7970,7 +7994,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "e25a7134",
+   "id": "ae3a6829",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7980,7 +8004,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "a28d4827",
+   "id": "f3a62d59",
    "metadata": {},
    "outputs": [
     {
@@ -8059,7 +8083,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "6c427bef",
+   "id": "84626dd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8071,7 +8095,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "f8f74c3a",
+   "id": "3be1e0fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8081,7 +8105,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "c9f3e0b0",
+   "id": "eb46ad19",
    "metadata": {},
    "outputs": [
     {
@@ -8167,7 +8191,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "ae0c581a",
+   "id": "e3eeb11c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8178,7 +8202,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "1e3feb0e",
+   "id": "07aff21a",
    "metadata": {},
    "outputs": [
     {
@@ -8253,7 +8277,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "8e4bfe84",
+   "id": "d77f6724",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8264,7 +8288,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "aa858fad",
+   "id": "4b33cb3a",
    "metadata": {},
    "outputs": [
     {
@@ -8285,7 +8309,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "c235b61e",
+   "id": "cfcb2506",
    "metadata": {},
    "outputs": [
     {
@@ -8306,7 +8330,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "43db27ab",
+   "id": "36afd7b9",
    "metadata": {},
    "outputs": [
     {
@@ -8329,7 +8353,7 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "id": "5112693b",
+   "id": "f31e70a3",
    "metadata": {},
    "outputs": [
     {
@@ -8352,7 +8376,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "44ef962d",
+   "id": "bfc59e73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8376,7 +8400,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "d026058f",
+   "id": "3df9c08c",
    "metadata": {},
    "outputs": [
     {
@@ -8397,7 +8421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbbf94f1",
+   "id": "8a1c22be",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8405,7 +8429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b098220f",
+   "id": "532655df",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8413,7 +8437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e072f692",
+   "id": "7db11f05",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8421,7 +8445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dad2703",
+   "id": "51c773e7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8429,7 +8453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "715fa3f1",
+   "id": "b1c31717",
    "metadata": {},
    "outputs": [],
    "source": []
